force-app/main/default/objects/MatchResult__c/MatchResult__c.object-meta.xml
<CustomObject>
    <label>Match Result</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>