force-app/main/default/objects/MatchResult__c/fields/account1Id__c.field-meta.xml
<CustomField>
    <fullName>account1Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>account1Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Match Results</relationshipLabel>
    <relationshipName>Match_Results</relationshipName>
    <type>Lookup</type>
</CustomField>