force-app/main/default/objects/MatchResult__c/fields/account2Id__c.field-meta.xml
<CustomField>
    <fullName>account2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>account2Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Match Results (account2Id)</relationshipLabel>
    <relationshipName>Match_Results1</relationshipName>
    <type>Lookup</type>
</CustomField>