force-app/main/default/objects/MatchResult__c/fields/DuplicateName__c.field-meta.xml
<CustomField>
    <fullName>DuplicateName__c</fullName>
    <formula>account2Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate Name</label>
    <type>Text</type>
</CustomField>