force-app/main/default/objects/MatchResult__c/fields/ID_ERP_Acc1__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP_Acc1__c</fullName>
    <formula>account1Id__r.ID_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID_ERP_Acc1</label>
    <type>Text</type>
</CustomField>