force-app/main/default/objects/MatchResult__c/fields/ID_ERP_Acc2__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP_Acc2__c</fullName>
    <formula>account2Id__r.ID_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID_ERP_Acc2</label>
    <type>Text</type>
</CustomField>