force-app/main/default/objects/MatchResult__c/fields/Segment1__c.field-meta.xml
<CustomField>
    <fullName>Segment1__c</fullName>
    <formula>CASE(TEXT(account1Id__r.MarketSegment__c),
  &apos;00001&apos;,&apos;America&apos;,
  &apos;00002&apos;,&apos;MENA&apos;,
  &apos;00004&apos;,&apos;Europe&apos;,
  &apos;00006&apos;,&apos;KLW&apos;,
  &apos;00010&apos;,&apos;CIS&apos;,
  &apos;00011&apos;,&apos;Ukraine&apos;,
  &apos;00100&apos;,&apos;Steel&apos;,
  &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment1</label>
    <type>Text</type>
</CustomField>