force-app/main/default/objects/MatchResult__c/fields/SourceName__c.field-meta.xml
<CustomField>
    <fullName>SourceName__c</fullName>
    <label>Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>