force-app/main/default/objects/MatchResult__c/listViews/All_Match_Result.listView-meta.xml
<ListView>
    <fullName>All_Match_Result</fullName>
    <columns>NAME</columns>
    <columns>SourceName__c</columns>
    <columns>account1Id__c</columns>
    <columns>ID_ERP_Acc1__c</columns>
    <columns>account2Id__c</columns>
    <columns>ID_ERP_Acc2__c</columns>
    <columns>matchIndex__c</columns>
    <columns>Verdict__c</columns>
    <columns>DuplicateName__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All Match Result</label>
</ListView>